--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,18 @@ spring.redis.lettuce.pool.max-active=8
 spring.redis.lettuce.pool.max-wait=-1ms
 spring.redis.lettuce.pool.max-idle=8
 spring.redis.lettuce.pool.min-idle=0
+
+# =========================== redis集群 ===========================
+#spring.redis.password=123456
+## 获取失败 最大重定向次数
+#spring.redis.cluster.max-redirects=3
+#spring.redis.lettuce.pool.max-active=8
+#spring.redis.lettuce.pool.max-wait=-1ms
+#spring.redis.lettuce.pool.max-idle=8
+#spring.redis.lettuce.pool.min-idle=0
+## 支持集群拓扑动态感应刷新，自适应拓扑刷新是否使用所有可用的更新，默认false关闭
+#spring.redis.lettuce.cluster.refresh.adaptive=true
+## 定时刷新
+#spring.redis.lettuce.cluster.refresh.period=2000
+##集群所在ip+端口
+#spring.redis.cluster.nodes=192.168.111.175:6381,192.168.111.175:6382,192.168.111.176:6383,192.168.111.176:6384
